--- a/Bootstrap Portfolio/buildspec.yml
+++ b/Bootstrap Portfolio/buildspec.yml
@@ -5,8 +5,7 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo Installing dependencies...
-      - npm install -g aws-cli # Install AWS CLI for deployment (if needed)
+      - echo "No dependencies to install."
   build:
     commands:
       - echo Building project...
@@ -14,9 +13,9 @@ phases:
   post_build:
     commands:
       - echo Post-build phase...
-      - echo Packaging static files...
+      - echo "Packaging static files..."
       - mkdir -p output
-      - cp -R . output/
+      - rsync -av --exclude=output ./ output/
 artifacts:
   files:
     - '**/*'
