modified  buildspec.yml

--- a/Bootstrap Portfolio/buildspec.yml
+++ b/Bootstrap Portfolio/buildspec.yml
@@ -1,23 +1,24 @@
-  version: 0.2
+version: 0.2
 
-  phases:
-    install:
-      commands:
-        - echo "No dependencies to install."
-    build:
-      commands:
-        - echo Building project...
-        - echo "No build step required for static Bootstrap projects"
-    post_build:
-      commands:
-        - echo Post-build phase...
-        - echo Packaging static files...
-        - mkdir -p output
-        - rsync -av --exclude=output ./ output/
-  artifacts:
-    files:
-      - '**/*'
-    base-directory: output
-  cache:
-    paths:
-      - '**/*'
+phases:
+  install:
+    commands:
+      - echo "No dependencies to install for Bootstrap project."
+  build:
+    commands:
+      - echo Build started on $(date)
+      - echo "Copying Bootstrap files to the output directory..."
+      - mkdir -p output
+      - cp -R * output/ # Assuming the current directory contains the Bootstrap project files
+  post_build:
+    commands:
+      - echo "Packaging the application for artifacts..."
+      - zip -r output/demo-app.zip output/
+artifacts:
+  files:
+    - output/demo-app.zip
+    - output/
+  base-directory: output
+cache:
+  paths:
+    - '**/*'
