--- a/Bootstrap Portfolio/appspec.yml
+++ b/Bootstrap Portfolio/appspec.yml
@@ -1,14 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: my-application-output/Bootstrap Portfolio/
     destination: /var/www/html
 hooks:
   AfterInstall:
-    - location: scripts/install_nginx.sh
+    - location: my-application-output/Bootstrap Portfolio/scripts/install_nginx.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_nginx.sh
+    - location: my-application-output/Bootstrap Portfolio/scripts/start_nginx.sh
       timeout: 300
       runas: root
