--- a/artifact/appspec.yml
+++ b/artifact/appspec.yml
@@ -1,14 +1,9 @@
 version: 0.0
 os: linux
 files:
-  - source: Sample-Portfolio/Bootstrap Portfolio
+  - source: /
     destination: /var/www/html
 hooks:
-  ApplicationStop:
-    - location: scripts/stop_nginx.sh
-      timeout: 300
-      runas: root
-      
   AfterInstall:
     - location: scripts/install_nginx.sh
       timeout: 300
